# fps_sandbox

./: .gitignore  pyproject.toml  pyrightconfig.json
fps_sandbox/: __init__.py  check_unassigned_fibres_skies.py  collect_fcam_data.py  confSummaryF_fix_fvc_image_path.py  confSummaryF_reprocess.py  confSummary_fix_fibre_swap.py  dar.py  disabled_robots.py  extract_sources.py  fit_gcam_focus_offsets.py  gcam_reprocess.py  get_all_skies.py  read_confsummary.py  recalculate_coordinates_confSummary.py  unused_stats.py
fps_sandbox/apo/: analyse_dither_sequence.py  analyse_fvc_rms.py  analyse_trajectories.py  apply_plate_holes_corrections.py  check_confSummaryF.py  check_coordinates.py  check_fvc_rotation.py  check_gimg_data.py  check_refraction.py  check_robot_dithers.py  fix_confSummary.py  fix_confSummaryF.py  fix_coordinates.py  focus_sweep.py  fvc_analysis.py  get_chiller_data.py  get_gfa_dither_data.py  get_gimg_data.py  plot_fvc_distances.py  plot_fvc_offsets.py  plot_guide_loop.py  plot_quickred.py  reprocess_fvc.py  reprocess_gimg.py  run_astrometrynet.py  test_fibre_table.py  test_focus_fit.py  test_guider_data.py
fps_sandbox/data/: SloanFPS_Assignments_2021Oct22.csv  SloanFPS_HexArray_2021July23.csv  astrometry_fit_59560.csv
fps_sandbox/inputs/confReprocess/: confSummaryF-3179-59618-35969-positionerTable.csv  confSummaryF-3180-59618-35969-positionerTable.csv  confSummaryF-3181-59618-35969-positionerTable.csv  confSummaryF-3182-59618-35969-positionerTable.csv  confSummaryF-3183-59618-35969-positionerTable.csv  confSummaryF-3184-59618-35969-positionerTable.csv  confSummaryF-3185-59618-35969-positionerTable.csv  confSummaryF-3186-59618-35969-positionerTable.csv  confSummaryF-3187-59618-35969-positionerTable.csv  confSummaryF-3188-59618-35969-positionerTable.csv  confSummaryF-3189-59618-35969-positionerTable.csv  confSummaryF-3190-59618-35969-positionerTable.csv  confSummaryF-3191-59618-35969-positionerTable.csv  confSummaryF-3192-59618-35969-positionerTable.csv  confSummaryF-3193-59618-35969-positionerTable.csv  confSummaryF-3194-59618-35969-positionerTable.csv  confSummaryF-3195-59618-35969-positionerTable.csv  confSummaryF-3217-59619-35975-positionerTable.csv  confSummaryF-3218-59619-35975-positionerTable.csv  confSummaryF-3219-59619-35975-positionerTable.csv  confSummaryF-3220-59619-35975-positionerTable.csv  confSummaryF-3221-59619-35975-positionerTable.csv  confSummaryF-3222-59619-35975-positionerTable.csv  confSummaryF-3223-59619-35975-positionerTable.csv  confSummaryF-3224-59619-35975-positionerTable.csv  confSummaryF-3225-59619-35975-positionerTable.csv  confSummaryF-3226-59619-35975-positionerTable.csv  confSummaryF-3227-59619-35975-positionerTable.csv  confSummaryF-3228-59619-35975-positionerTable.csv  confSummaryF-3229-59619-35975-positionerTable.csv  confSummaryF-3230-59619-35975-positionerTable.csv  confSummaryF-3231-59619-35975-positionerTable.csv  confSummaryF-3232-59619-35975-positionerTable.csv  confSummaryF-3248-59620-35957-positionerTable.csv  confSummaryF-3249-59620-35957-positionerTable.csv  confSummaryF-3250-59620-35957-positionerTable.csv  confSummaryF-3251-59620-35957-positionerTable.csv  confSummaryF-3252-59620-35957-positionerTable.csv  confSummaryF-3253-59620-35957-positionerTable.csv  confSummaryF-3254-59620-35957-positionerTable.csv  (+329 more)
fps_sandbox/inputs/lco/: comm_designs.csv
fps_sandbox/lco/: boss_calibs.py  boss_stats.py  check_gimg_data_lco.py  fibre_mapping.py  fix_boss_fibre_swap.py  fix_boss_headers.py  focus_curve.py  fvc_epsf.py  gcam_focus.py  gcam_n_stars_comm.py  gcam_reprocess.py  gcam_ron.py  gcam_wok.py  gfa_limiting_magnitude.py  guiding_rms.py  mtp_to_fibre.py  plot_can_buses.py  random_moves.py  remap_apogee_fibres.py  test_gaia_guiding.py  test_sextants.py
fps_sandbox/notebooks/: dither_sequence_check.ipynb
fps_sandbox/osu/: analyse_coords.py  check_buses.py  check_layout.py  get_hall_calibration.py  move_all_safe_random.py  move_all_safe_random_extra.py  move_all_subarray.py  move_beta_continuous.py  move_sequence.py
fps_sandbox/results/: chiller_data.csv
