[tool.poetry]
name = "fps_sandbox"
version = "0.1.0"
description = "Sandbox for FPS scripts and tools."
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
astropy = ">=4.0.0"
pandas = "^1.3.1"
numpy = "^1.21.1"
# sdss-coordio = {path="../coordio", develop=true}
# jaeger = {path="../jaeger", develop=true}
# sdss-cherno = {path="../cherno", develop=true}
sdss-coordio = "^1.6.1"
jaeger = "^1.3.1"
sdss-cherno = ">=0.5.0"
tables = ">=3.6.1"
sep = ">=1.2.0"
matplotlib = ">=3.5"
seaborn = ">=0.12.0"
tqdm = ">=4.62.3"
rich = ">=11.2.0"
photutils = "^1.7.0"
pyarrow = "^14.0.1"

[tool.poetry.dev-dependencies]
ipython = ">=8.0.0"
invoke = "*"
doc8 = ">=0.8.0"
typing_extensions = {version="*", python="~3.7"}
ipdb = ">=0.13.3"
autopep8 = ">=1.5.4"
black = ">=20.8b1"
rstcheck = ">=3.3.1"
pyserial-asyncio = ">=0.5"
sphinx-jsonschema = ">=1.16.8"
myst-parser = ">=0.14.0"
furo = ">=2021.6.18-beta.36"
nox = ">=2021.6.12"
sphinx-autobuild = ">=2021.3.14"
sphinx-copybutton = ">=0.3.3"
pandas-stubs = ">=1.2.0"
ruff = ">=0.1.0"

[tool.black]
line-length = 88
target-version = ['py311']
fast = true

[tool.ruff]
line-length = 88
target-version = 'py311'
select = ["E", "F", "I"]
unfixable = ["F841"]
exclude = ["typings/"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.isort]
known-first-party = ["fps_sandbox"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "sdssdb", "drift", "jaeger", "coordio", "kaiju", "cherno"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
