[tool.poetry]
name = "fps_sandbox"
version = "0.1.0"
description = "Sandbox for FPS scripts and tools."
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
sdsstools = "^1.5.3"
astropy = "^6.0.0"
pandas = "^2.0.0"
numpy = "^1.21.1"
sdss-coordio = "^1.6.1"
tables = ">=3.6.1"
sep = ">=1.2.0"
matplotlib = ">=3.5"
seaborn = ">=0.12.0"
tqdm = ">=4.62.3"
rich = ">=11.2.0"
photutils = "^1.7.0"
pyarrow = "^14.0.1"

[tool.poetry.dev-dependencies]
ipython = ">=8.0.0"
invoke = "*"
ipdb = ">=0.13.3"
black = ">=20.8b1"
pandas-stubs = ">=1.2.0"
ruff = ">=0.1.0"

[tool.black]
line-length = 88
target-version = ['py312']
fast = true

[tool.ruff]
line-length = 88
target-version = 'py312'
select = ["E", "F", "I"]
unfixable = ["F841"]
exclude = ["typings/"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.isort]
known-first-party = ["fps_sandbox"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "sdssdb", "drift", "jaeger", "coordio", "kaiju", "cherno"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
