[project]
name = "fps_sandbox"
version = "0.1.0"
description = "Sandbox for FPS scripts and tools."
authors = [ { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" } ]

requires-python = ">=3.11,<3.13"

dependencies = [
    "sdsstools>=1.5.3",
    "astropy>=6.0.0",
    "pandas>=2.0.0",
    "numpy>=1.21.1",
    "sdss-coordio>=1.6.1",
    "tables>=3.6.1",
    "sep>=1.2.0",
    "matplotlib>=3.5",
    "seaborn>=0.12.0",
    "tqdm>=4.62.3",
    "rich>=11.2.0",
    "photutils>=1.7.0",
    "pyarrow",
    "fitsio>=1.2.1",
    "polars>=1.0.0",
    "requests>=2.32.3",
    "jaeger>=1.7.7",
]

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "invoke",
    "ipdb>=0.13.3",
    "pandas-stubs>=1.2.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]
exclude = ["typings/"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["fps_sandbox"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "sdssdb", "drift", "jaeger", "coordio", "kaiju", "cherno"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
